--- a/Frontend/RecipeBuddy/src/index.html
+++ b/Frontend/RecipeBuddy/src/index.html
@@ -5,6 +5,9 @@
   <title>RecipeBuddy</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
+  <!-- End fonts -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
